# armv1

armv1/: CMakeLists.txt  controller.yaml  package.xml
armv1 2/: moveit_config.yaml
armv1 2/config/: arm_joint_states.yaml  joint_trajectory_controller.yaml  trajectory_control.yaml
armv1 2/launch/: spawn_robot.launch copy.py  spawn_robotrv.launch.py
armv1 2/meshes/: link_2.STL  link_3.STL
armv1 2/urdf/: arm.gazebo.xacro  arm_exten.xacro  arm_gz.xacro  new_gz.xacro
armv1/config/: moveit_controller.yaml
armv1/launch/: gz_xacro.launch copy.py  gz_xacro.launch.py  mi_xacro.launch.py  spawn_robot.launch.py  spawn_robotrv.launch.py
armv1/meshes/: base_link.STL  link_1.STL  link_4.STL  link_5.STL
armv1/urdf/: arm.gazebo.xacro  arm2_gz.xacro  arm_exten.xacro  arm_gz.xacro  arm_mi.xacro  armv1_description.csv  new_gz.xacro
armv1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
armv1_moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
armv1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
